# xhotit

./: README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish-to-manual-release.yml
src/: App.tsx  constant.ts  gradients.ts  helpers.ts  main.tsx  styles.main.css  styles.overlay.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/xhotit-icons/: Xhotr.icns
src-tauri/src/: app_command.rs  app_directory.rs  app_menu.rs  app_win_manager.rs  configuration.rs.bak  constant.rs  image_compressor.rs  main.rs  overlay.rs  screenshot.rs  tauri_command.rs
src-tauri/src/image_compressor/: jpeg.rs  mod.rs  png.rs  shared.rs
src-tauri/src/utils/: constant.rs  file.rs  mod.rs
src/compress/: CompressAppContainer.tsx  EmptyState.tsx  SettingsPanel.tsx  Table.tsx  ToolbarAction.tsx  compress.module.css  store.ts  table.module.css
src/icons/: Spinner.tsx
src/main/: EmptyState.tsx  GhostPanel.tsx  GradientSelect.tsx  MainAppContainer.tsx  PreviewPanel.tsx  SettingPanel.tsx
src/main/screenshots/: GradientSelect.tsx  ScreenshotList.tsx  useScreenshotList.tsx
src/overlay/: App.module.css  OverlayAppContainer.tsx
src/overlay/hooks/: useHandleEsc.tsx
src/overlay/selection/: RectangleSelection.tsx
src/styles/: index.css  styles.compress.css  styles.main.css  styles.overlay.css
