[package]
name = "xhotit"
version = "0.1.0"
description = "Screenshot Capture"
authors = ["Irfan Maulana"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xhotit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Screenshot was old version from xcap
# Consider to migrate to xcap
screenshots = "0.8.10"
xcap = "0.2.1"
cocoa = "0.25.0"
base64 = "0.21.5"
fs_extra = "1.3.0"
directories = "5.0.1"

# Maybe unused
scrap = "0.5.0"
repng = "0.2.2"
core-graphics = "0.22.3"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json"] }
tauri-plugin-upload = "2"

# DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
