[package]
name = "xhotit"
version = "1.1.1"
description = "Xhot It - Screen Capture"
authors = ["Irfan Maulana"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "xhotit_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = [
  "macos-private-api",
  "protocol-asset",
  "tray-icon",
  "image-ico",
  "image-png",
  # "devtools",
] }
tauri-plugin-opener = "2.2.4"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-upload = "2.2.1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# Consider to migrate to xcap
screenshots = "0.8.10"
xcap = "0.2.2"
base64 = "0.22.1"
fs_extra = "1.3.0"
directories = "6.0.0"
chrono = "0.4.39"
active-win-pos-rs = "0.9"
image = { version = "0.25.5", default-features = false, features = [
  "jpeg",
  "ico",
  "png",
  "pnm",
  "tga",
  "tiff",
  "bmp",
  "webp",
  "hdr",
  "dds",
] }
png = "0.17.16"
jpeg-decoder = "0.3.1"
mozjpeg-sys = { version = "2.2.2", default-features = false }
libc = "0.2.169"
lodepng = { version = "3.10.7", default-features = false }
log = "0.4.25"

# [target."cfg(not(target_os = \"windows\"))".dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"


# Maybe unused
# scrap = "0.5.0"
# repng = "0.2.2"
# core-graphics = "0.24.0"
# reqwest = { version = "0.12.12", features = ["json"] }

# DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
